Pending changes in the mainline
===============================

* New types of annotations:
  - Pixel probe
  - Rectangle probe
  - Ellipse probe
* Added vertical slider showing position of the current frame inside the series
* Display of orientation markers
* The text field with the instance number is editable to go to a specific instance
* New configuration options:
  - "ShowInfoPanelAtStartup" to control the info panel at startup
  - "ShowUserPreferencesButton" to show the button for setting preferences
  - "ShowNotForDiagnosticUsageDisclaimer" to show disclaimer about diagnostic usage
  - "DicomWebHttpHeaders" to set HTTP headers in DICOMweb requests

Maintenance
-----------

* Fix issues with drag-and-drop
* Fix handling of "token": The authorization header was not set in QIDO-RS requests
* Start at the first frame for series presumably not containing 3D images (e.g. US)
* More tolerance wrt. bad values of the Pixel Spacing (0028,0030) tag
* Support of DICOM images without the Study Date (0008,0020) tag
* Upgraded Vue.js to 2.6.4


Version 2.3 (2022-03-24)
========================

* Display of overlays
* List of series:
  - Display the SeriesNumber tag in front of image count
  - Order series by SeriesNumber
  - Don't show non displayable series (see "SkipSeriesFromModalities")
* In the top right overlay, display ContentDate/ContentTime if they are 
  available in the instance. If not, StudyDate is displayed (previous
  behavior).
* New configuration options:
  - "TimeFormat" to control the way DICOM times are displayed
  - "SkipSeriesFromModalities" to ignore series with given modality types


Version 2.2 (2021-08-31)
========================

* Support detection of windowing and rescale in Philips multiframe images
* Fix values reported in "ww/wc" info panel (windowing width and center)


Version 2.1 (2021-06-29)
========================

* New configuration options:
  - "DownloadDicomDir" to download archives containing DICOMDIR instead of