@@ -5,6 +5,7 @@ Pending changes in the mainline
   - Pixel probe
   - Rectangle probe
   - Ellipse probe
+* Added left/right rotation buttons
 * Added vertical slider showing position of the current frame inside the series
 * Display of orientation markers
 * The text field with the instance number is editable to go to a specific instance
